plugins/paintops/libpaintop/kis_dab_cache.cpp
@@ -34,6 +34,8 @@ struct KisDabCache::Private {
         : brush(brush)
     {}
 
+    int seqNo = 0;
+
     KisFixedPaintDeviceSP dab;
     KisFixedPaintDeviceSP dabOriginal;
 
@@ -123,7 +125,6 @@ KisFixedPaintDeviceSP KisDabCache::fetchFromCache(KisDabCacheUtils::DabRendering
         *dstDabRect = KisDabCacheUtils::correctDabRectWhenFetchedFromCache(*dstDabRect, m_d->dab->bounds().size());
     }
 
-    resources->brush->notifyCachedDabPainted(info);
     return m_d->dab;
 }
 
@@ -164,6 +165,11 @@ KisFixedPaintDeviceSP KisDabCache::fetchDabCommon(const KoColorSpace *cs,
     }
 
     using namespace KisDabCacheUtils;
+
+    // 0. Notify brush that we ar going to paint a new dab
+
+    m_d->brush->prepareForSeqNo(info, m_d->seqNo);
+    m_d->seqNo++;
 
     // 1. Calculate new dab parameters and whether we can reuse the cache
 
